<resources>
    <string name="app_name">Austerlitz</string>
    <string name="Fire">Fire</string>
    <string name="Melee">Melee</string>
    <string name="VP">VP</string>
    <string name="oppotunity_fire">Oppotunity Fire</string>
    <string name="coalition_firing_at_least_at_3_or_4_hexes">Coalition firing at least at 3 or 4 hexes</string>
    <string name="storm_except_for_adjacent_target">Storm (except for adjacent target)</string>
    <string name="clear_terrain_hex_with_a_lead_infantry_unit_in_defence_order">Clear terrain hex with a lead infantry unit in defence order</string>
    <string name="mud_except_for_adjacent_target">Mud (except for adjacent target)</string>
    <string name="versus_artillery_along_in_the_hex">Versus artillery along in the hex</string>
    <string name="artillery_modifiers">Artillery Modifiers</string>
    <string name="cavalry_unprepared_attack">Cavalry unprepared attack</string>
    <string name="attack_with_a_demoralized_lead_unit">Attack with a demoralized lead unit</string>
    <string name="mixing_attaker_s_formation_penalty">Mixing Attaker\'s Formation penalty</string>
    <string name="encircled_defender">Encircled Defender</string>
    <string name="attack_versus_a_stock_containing_at_least_one_routed_unit">Attack versus a stock containing at least one routed unit.</string>
    <string name="mixing_defenders_s_formation_penalty">Mixing Defenders\'s Formation penalty</string>
    <string name="fatigued_defending_cavalry">Fatigued Defending Cavalry</string>
    <string name="front_attacking_units">Front Attacking Units</string>
    <string name="flank_attacking_cavalry_units">Flank Attacking Cavalry Units</string>
    <string name="defending_units">Defending Units</string>
    <string name="attacking_unit_modifiers">Attacking Unit Modifiers</string>
    <string name="common_modifiers">Common Modifiers</string>
    <string name="no_attackers_are_selected">No attackers are selected!</string>
    <string name="тo_defenders_are_selected">No defenders are selected!</string>
    <string name="no_dice_roll_value_is_given">No dice roll value is given!</string>
    <string name="if_defending_stock_is_in_clear_terrain_not_in_defence_order_it_is_automatically_eliminated">If defending stock is in clear terrain not in defence order, it is automatically eliminated!</string>
    <string name="_1_step_lose">1 Step Lose</string>
    <string name="step_lose">Step Lose</string>
    <string name="one_step">1 Step</string>
    <string name="reduce_stoking_units">Reduce Stoking Units</string>
    <string name="quality_factor_check">Quality Factor Check</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="fire_skirmish_outcome">Fire skirmish outcome</string>
    <string name="activated_attackers_flank_cavalry_units">Activated Attacker\'s Flank Cavalry Units</string>
    <string name="activated_attackers_units">Activated Attacker\'s Units</string>
    <string name="activated_defenders_units">Activated Defender\'s Units</string>
    <string name="dice_rolls">Dice Rolls</string>
    <string name="terrain_modifier">Terrain Modifier</string>
    <string name="defender_TQ_Attacker_TQ">Defender TQ - Attacker TQ</string>
    <string name="combat_result">Combat result</string>
    <string name="distance">Range (hex)</string>
    <string name="artillery_and_none_artillery_units_cannot_be_used_together">Artillery and None Artillery units cannot be used together!</string>
    <string name="melee">Melee!</string>
    <string name="clear">Clear</string>
    <string name="fire">Fire!</string>
    <string name="o_no_miss">O no... Miss!</string>
    <string name="close">Close</string>
    <string name="_step_s_">\u0020Step(s)</string>
    <string name="defending_unit_modifiers">Defending Unit Modifiers</string>
</resources>